--- a/simulador/pom.xml
+++ b/simulador/pom.xml
@@ -54,6 +54,36 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- ===============================
+             JAKARTA MAIL (ENVÍO DE CORREOS)
+           =============================== -->
+
+        <!-- API de Jakarta Mail -->
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <!-- Implementación de Jakarta Mail (Eclipse Angus) -->
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+        <!-- Jakarta Activation (necesaria para adjuntos / tipos MIME) -->
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <!--
+          Nota: no uses scope "provided" aquí, porque tu app JavaFX es de escritorio
+          y necesita llevar estas librerías dentro del classpath/artefacto.
+        -->
+
     </dependencies>
 
     <!-- ===============================
